# Antares-AI

./: .gitignore  README.md
antares-ai/: .gitignore  README.md  index.html  package.json
antares-ai/src/: App.vue  AppWasmTest.vue  main.ts  style.css
antares-ai/src/components/: ImageCanvas.vue
antares-ai/src/composables/: useImageEditor.ts  useImageEditorWasm.ts
antares-ai/src/core/: CanvasEngine.ts
antares-ai/src/filters/: BrightnessFilterWasm.ts  DuotoneFilter.ts  HighlightsShadowsFilter.ts  HighlightsShadowsFilterWasm.ts  ImageFilter.ts  InvertFilter.ts  (+4 more)
antares_core/: .env.example  .gitignore  alembic.ini  color_utils.py  config.py  database.py  filter_predictor.py  main.py  ml_utils.py  models.py  pyproject.toml  train_model.py
antares_core/features/: image_analyzer.py
antares_core/migrations/: env.py
antares_core/migrations/versions/: 20260710_1857_76c55e9571a3_init.py
antares_core/ml/: __init__.py  color_utils.py  filter_predictor.py  ml_utils.py  train.py
antares_core/routers/: prediction.py  training_images.py
antares_wgpu/: Cargo.toml
antares_wgpu/src/: lib.rs  main.rs
antares_wgpu/src/filters/: brightness.rs  highlights_shadows.rs  mod.rs  temperature_tint.rs  vibrance.rs
antares_wgpu/src/gpu/: brightness.rs  highlights_shadows.rs  mod.rs  temperature_tint.rs  vibrance.rs
antares_wgpu/src/shaders/: brightness.wgsl  highlights_shadows.wgsl  temperature_tint.wgsl
antares_wgpu/src/utils/: color.rs
models/: Xin1.0.pt  Xin1.0_scaler.json  Xin1.0_target_scaler.json  Xin1.5.pt  Xin1.5_scaler.json  Xin1.5_target_scaler.json
(+9 files in other folders)
