[project]
name = "antares-core"
version = "0.1.0"
description = "The backend for Antares Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "uvicorn>=0.50.0",
]
