[package]
name = "antares_wgpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2.126"

[dev-dependencies]
wasm-bindgen-test = "0.3.76"

[profile.release]
# Optimize for small WASM binary size
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
